# flowgate-codex

./: .gitignore  Dockerfile  package-lock.json  package.json
Onboarding-API/: Dockerfile  package-lock.json  package.json  server.js
agentic-flow/: Query_db_vertex.py  create_embedd_vertex.py  main_workflow.py  pyproject.toml  requirements.txt  text_2_sql.py
graph-backend/: Dockerfile  main.py  requirements.txt
liveblocks-auth-server/: Dockerfile  liveblocks-auth-server.js  package-lock.json  package.json
public/: index.html
public/data/: environmental_permit.json  fix_json.py  uberCOC.json  uberEED.json  uberEUTaxonomy.json  uberISO14001.json  uberISO27001.json  uberISO9001.json
src/: App.js  index.js  liveblocks.config.js  liveblocks.js
src/components/: CollaborationPanel.js  ComplianceChat.js  DataCenterHub.js  DataValidation.js  Goals.js  TaskManagement.js  VisualizedMetrics.js  WorkflowWizard.js  Workflows.js
src/components/Steps/: CompanyDetails.js  Confirmation.js  GoalExtraction.js  ReportUpload.js
src/components/auth/: LoginButton.js  Logout.js  LogoutButton.js  OnboardingGuard.js  OnboardingProtectedRoute.js  ProtectedRoute.js
src/components/layout/: Header.js  Layout.js  OnboardingLayout.js  Sidebar.js
src/components/tasks/: LiveTasksRoom.jsx  LiveWorkflowsRoom.jsx  LiveWorkflowsWizardRoom.jsx
src/components/ui/: ChatWidget.js  DocumentUploadModal.js  FilePreview.js  FileUploadButton.js  SmartUploadModal.js
src/components/utils/: ChatContext.js  DebuggingUtils.js  usePageContext.js
src/context/: CustomAuthContext.js  LiveblocksProvider.js  OnboardingContext.js  ProfileContext.js  TaskGoalContext.js
src/pages/: ComplianceChat.js  DataCenterHub.js  DataValidation.js  Goals.js  LoginPage.js  OnboardingFlow.js  Settings.js  TaskManagement.js  VisualizedMetrics.js  Workflows.js
src/services/: FileUploadService.js  GeminiService.js  goalsService.js  pdfProcessor.js  taskService.js
src/styles/: FileUpload.css  auth.css  global.css  liveblocks-collaboration.css  onboarding.css  variables.css
src/utils.js/: constants.js
